# mr-zurkon

./: .flake8  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: validate_and_test.yml
.github/workspace/: validate_and_test.yml
ci/githooks/: .pre-commit-config.yaml
models/: youtubedl_helper.py
src/: main.py  requirements.txt
zurkon/: __init__.py
zurkon/models/: youtubedl_helper.py  zurkon_controller.py
